canonical parallel implementation

--- a/sandbox/bench.ipynb
+++ b/sandbox/bench.ipynb
@@ -56,7 +56,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.66 ms ± 91.5 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "1.73 ms ± 145 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -75,7 +75,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.37 ms ± 230 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "4.35 ms ± 206 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -94,13 +94,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.15 ms ± 141 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "2.17 ms ± 154 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit -r1000 -n1\n",
-    "anjl.canonical_nj(small_dist)"
+    "anjl.canonical_nj(small_dist, parallel=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "68884753-f4b9-484c-a82b-1ffce38d0400",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The slowest run took 57.33 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "2.48 ms ± 4.01 ms per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -r1000 -n1\n",
+    "anjl.canonical_nj(small_dist, parallel=True)"
    ]
   },
   {
@@ -113,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "befccb6f-dffa-49b7-97eb-1d5437568001",
    "metadata": {},
    "outputs": [
@@ -123,7 +143,7 @@
        "(472, 472)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "ebf1c642-1fa3-4047-a981-ddcd7afdf76c",
    "metadata": {},
    "outputs": [
@@ -144,7 +164,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.39 ms ± 266 μs per loop (mean ± std. dev. of 500 runs, 1 loop each)\n"
+      "7.95 ms ± 1.21 ms per loop (mean ± std. dev. of 500 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -155,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "a7155702-0e81-4d54-a6b2-c68642e056f2",
    "metadata": {},
    "outputs": [
@@ -163,7 +183,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "34.7 ms ± 855 μs per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "35.4 ms ± 1.74 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -174,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "316ec457-3799-4843-80df-491956229101",
    "metadata": {},
    "outputs": [
@@ -182,13 +202,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "24.8 ms ± 1.02 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "25 ms ± 1.42 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit -r200 -n1\n",
-    "anjl.canonical_nj(medium_dist)"
+    "anjl.canonical_nj(medium_dist, parallel=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "6ab837d0-37ad-4d57-b063-4150851142c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The slowest run took 11.82 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "14.1 ms ± 13.2 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -r200 -n1\n",
+    "anjl.canonical_nj(medium_dist, parallel=True)"
    ]
   },
   {
@@ -201,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "31ba8838-150b-42ee-84fd-7da492b8c36c",
    "metadata": {},
    "outputs": [
@@ -211,7 +251,7 @@
        "(3081, 3081)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "00997e17-82ec-4e34-be55-26631a80c738",
    "metadata": {},
    "outputs": [
@@ -232,7 +272,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 344.52 MiB, increment: 18.05 MiB\n"
+      "peak memory: 344.43 MiB, increment: 18.03 MiB\n"
      ]
     }
    ],
@@ -243,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "782af7e8-8891-431b-be9e-835b442410c7",
    "metadata": {},
    "outputs": [
@@ -251,7 +291,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 343.70 MiB, increment: 17.08 MiB\n"
+      "peak memory: 344.34 MiB, increment: 17.80 MiB\n"
      ]
     }
    ],
@@ -262,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "e825c570-c9b0-4405-b0b3-84680eaf5f2a",
    "metadata": {},
    "outputs": [
@@ -270,7 +310,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "342 ms ± 46 ms per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
+      "335 ms ± 15.1 ms per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -281,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "edbc408e-f210-4bd4-8762-e249c66c1dd0",
    "metadata": {},
    "outputs": [
@@ -289,7 +329,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.96 s ± 12.1 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
+      "2.97 s ± 21.9 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -300,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "0bc124d6-dfcb-4513-ae57-471c2a063d62",
    "metadata": {},
    "outputs": [
@@ -308,13 +348,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.59 s ± 28.8 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
+      "7.67 s ± 72.3 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit -r3 -n1\n",
-    "anjl.canonical_nj(large_dist)"
+    "anjl.canonical_nj(large_dist, parallel=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "f91c379e-39c6-4356-8ebb-e314d1bbb9f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.37 s ± 44.4 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -r3 -n1\n",
+    "anjl.canonical_nj(large_dist, parallel=True)"
    ]
   },
   {
@@ -327,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "c219009d-5813-4f98-ad24-ed9b341c438d",
    "metadata": {},
    "outputs": [
@@ -337,7 +396,7 @@
        "(5868, 5868)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "6c65d726-92f9-4294-ac41-8d6f7b182572",
    "metadata": {},
    "outputs": [
@@ -358,7 +417,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 607.52 MiB, increment: 65.63 MiB\n"
+      "peak memory: 608.53 MiB, increment: 65.71 MiB\n"
      ]
     }
    ],
@@ -369,14 +428,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
+   "id": "e2005194-6b68-48a4-94fe-20f5e75a7c53",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "peak memory: 608.53 MiB, increment: 65.62 MiB\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%memit\n",
+    "anjl.canonical_nj(xl_dist);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "50f32cfd-9755-40ba-ba55-7eef7242a6cf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "84d173feba3f4adebdb98cab851fc61f",
+       "model_id": "1d0a8249b7a745ef85c42956e8b9e8f6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -391,8 +469,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.12 s, sys: 17.9 ms, total: 2.14 s\n",
-      "Wall time: 2.13 s\n"
+      "CPU times: user 2.18 s, sys: 17 ms, total: 2.2 s\n",
+      "Wall time: 2.18 s\n"
      ]
     }
    ],
@@ -403,14 +481,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "id": "d03fdca2-2c6e-4389-ad3c-0bb84eb6ce16",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f13df581e4084d329817d854547a1c24",
+       "model_id": "b658fe0f17a440888577424cd91f646a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -425,8 +503,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 20.3 s, sys: 316 ms, total: 20.6 s\n",
-      "Wall time: 20.5 s\n"
+      "CPU times: user 19.5 s, sys: 261 ms, total: 19.8 s\n",
+      "Wall time: 19.7 s\n"
      ]
     }
    ],
@@ -437,14 +515,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "id": "49b6da7b-1ee3-49e1-98ca-2706a5195b01",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b13b2c9922b54599adcfb2d9629d19f1",
+       "model_id": "61d85a7b70b6416ba44c0386a808ab19",
        "version_major": 2,
        "version_minor": 0
       },
@@ -459,14 +537,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 31s, sys: 127 ms, total: 1min 31s\n",
-      "Wall time: 1min 31s\n"
+      "CPU times: user 1min 25s, sys: 136 ms, total: 1min 25s\n",
+      "Wall time: 1min 25s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "anjl.canonical_nj(xl_dist, progress=tqdm);"
+    "anjl.canonical_nj(xl_dist, progress=tqdm, parallel=False);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "b5959611-567d-4efc-a05a-1e2a8bed806f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4c07537b7c354212b9ccf802f762cd1b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/5867 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 3min 12s, sys: 237 ms, total: 3min 12s\n",
+      "Wall time: 25.1 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "anjl.canonical_nj(xl_dist, progress=tqdm, parallel=True);"
    ]
   },
   {
@@ -479,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "id": "ccd20931-8281-49ff-b142-d0fae8d53f63",
    "metadata": {},
    "outputs": [
@@ -489,7 +601,7 @@
        "(8825, 8825)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,14 +614,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
+   "id": "e812009e-2642-4d93-a85b-a63f11828b5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "peak memory: 1157.98 MiB, increment: 148.50 MiB\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%memit\n",
+    "anjl.dynamic_nj(xxl_dist);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "id": "4b302183-5d97-41c0-857f-59086e8b981f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9ed91d22cc3c4b63bccc358ec47431b7",
+       "model_id": "92ea5360473447ed880196af73f7b133",
        "version_major": 2,
        "version_minor": 0
       },
@@ -524,8 +655,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6.39 s, sys: 35.9 ms, total: 6.43 s\n",
-      "Wall time: 6.38 s\n"
+      "CPU times: user 6.36 s, sys: 26 ms, total: 6.38 s\n",
+      "Wall time: 6.34 s\n"
      ]
     }
    ],
@@ -536,14 +667,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "id": "94f6d2f5-e61e-45c8-934f-66289798bce9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0402fdf675f4420b851c0b01a2306165",
+       "model_id": "04834876092d459bb44783f575b7e283",
        "version_major": 2,
        "version_minor": 0
       },
@@ -558,8 +689,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 10s, sys: 663 ms, total: 1min 10s\n",
-      "Wall time: 1min 10s\n"
+      "CPU times: user 1min 4s, sys: 638 ms, total: 1min 4s\n",
+      "Wall time: 1min 4s\n"
      ]
     }
    ],
@@ -570,11 +701,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9d9707a2-daa4-4ec6-a1eb-18e5a6645edf",
+   "execution_count": 30,
+   "id": "8c4a9a32-2922-460b-9df1-3baacbb7633f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f46779776cfc4f4694f4ef7aec1db24e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/8824 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 12min 50s, sys: 861 ms, total: 12min 51s\n",
+      "Wall time: 1min 40s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "anjl.canonical_nj(xxl_dist, progress=tqdm, parallel=True);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a07505b-92af-44f5-a03b-9579b263e667",
+   "metadata": {},
+   "source": [
+    "## Epilogue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "d8b58001-517c-452e-9e54-68fd7da9eaad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Architecture:             x86_64\n",
+      "  CPU op-mode(s):         32-bit, 64-bit\n",
+      "  Address sizes:          39 bits physical, 48 bits virtual\n",
+      "  Byte Order:             Little Endian\n",
+      "CPU(s):                   8\n",
+      "  On-line CPU(s) list:    0-7\n",
+      "Vendor ID:                GenuineIntel\n",
+      "  Model name:             Intel(R) Xeon(R) CPU E3-1505M v5 @ 2.80GHz\n",
+      "    CPU family:           6\n",
+      "    Model:                94\n",
+      "    Thread(s) per core:   2\n",
+      "    Core(s) per socket:   4\n",
+      "    Socket(s):            1\n",
+      "    Stepping:             3\n",
+      "    CPU max MHz:          3700.0000\n",
+      "    CPU min MHz:          800.0000\n",
+      "    BogoMIPS:             5599.85\n",
+      "    Flags:                fpu vme de pse tsc msr pae mce cx8 apic sep mtrr pge m\n",
+      "                          ca cmov pat pse36 clflush dts acpi mmx fxsr sse sse2 s\n",
+      "                          s ht tm pbe syscall nx pdpe1gb rdtscp lm constant_tsc \n",
+      "                          art arch_perfmon pebs bts rep_good nopl xtopology nons\n",
+      "                          top_tsc cpuid aperfmperf pni pclmulqdq dtes64 monitor \n",
+      "                          ds_cpl vmx smx est tm2 ssse3 sdbg fma cx16 xtpr pdcm p\n",
+      "                          cid sse4_1 sse4_2 x2apic movbe popcnt tsc_deadline_tim\n",
+      "                          er aes xsave avx f16c rdrand lahf_lm abm 3dnowprefetch\n",
+      "                           cpuid_fault epb pti ssbd ibrs ibpb stibp tpr_shadow f\n",
+      "                          lexpriority ept vpid ept_ad fsgsbase tsc_adjust bmi1 a\n",
+      "                          vx2 smep bmi2 erms invpcid mpx rdseed adx smap clflush\n",
+      "                          opt intel_pt xsaveopt xsavec xgetbv1 xsaves dtherm ida\n",
+      "                           arat pln pts hwp hwp_notify hwp_act_window hwp_epp vn\n",
+      "                          mi md_clear flush_l1d arch_capabilities\n",
+      "Virtualisation features:  \n",
+      "  Virtualisation:         VT-x\n",
+      "Caches (sum of all):      \n",
+      "  L1d:                    128 KiB (4 instances)\n",
+      "  L1i:                    128 KiB (4 instances)\n",
+      "  L2:                     1 MiB (4 instances)\n",
+      "  L3:                     8 MiB (1 instance)\n",
+      "NUMA:                     \n",
+      "  NUMA node(s):           1\n",
+      "  NUMA node0 CPU(s):      0-7\n",
+      "Vulnerabilities:          \n",
+      "  Gather data sampling:   Vulnerable: No microcode\n",
+      "  Itlb multihit:          KVM: Mitigation: VMX disabled\n",
+      "  L1tf:                   Mitigation; PTE Inversion; VMX conditional cache flush\n",
+      "                          es, SMT vulnerable\n",
+      "  Mds:                    Mitigation; Clear CPU buffers; SMT vulnerable\n",
+      "  Meltdown:               Mitigation; PTI\n",
+      "  Mmio stale data:        Mitigation; Clear CPU buffers; SMT vulnerable\n",
+      "  Reg file data sampling: Not affected\n",
+      "  Retbleed:               Mitigation; IBRS\n",
+      "  Spec rstack overflow:   Not affected\n",
+      "  Spec store bypass:      Mitigation; Speculative Store Bypass disabled via prct\n",
+      "                          l\n",
+      "  Spectre v1:             Mitigation; usercopy/swapgs barriers and __user pointe\n",
+      "                          r sanitization\n",
+      "  Spectre v2:             Mitigation; IBRS; IBPB conditional; STIBP conditional;\n",
+      "                           RSB filling; PBRSB-eIBRS Not affected; BHI Not affect\n",
+      "                          ed\n",
+      "  Srbds:                  Mitigation; Microcode\n",
+      "  Tsx async abort:        Mitigation; TSX disabled\n"
+     ]
+    }
+   ],
+   "source": [
+    "!lscpu"
+   ]
   }
  ],
  "metadata": {
