--- a/sandbox/plot.ipynb
+++ b/sandbox/plot.ipynb
@@ -479,6 +479,7 @@
     "\n",
     "Z5d = anjl.dynamic_nj(dist5)\n",
     "Z5r = anjl.rapid_nj(dist5)\n",
+    "Z5 = anjl.canonical_nj(dist5)\n",
     "\n",
     "D5.shape"
    ]
@@ -504,18 +505,19 @@
     ")\n",
     "figd = anjl.plot(Z5d, **params5)\n",
     "figr = anjl.plot(Z5r, **params5)\n",
-    "figures = [figr, figd]\n",
+    "figc = anjl.plot(Z5, **params5)\n",
+    "figures = [figc, figr, figd]\n",
     "fig = make_subplots(\n",
     "    rows=1,\n",
     "    cols=len(figures),\n",
-    "    subplot_titles=[\"Rapid\", \"Dynamic\"],\n",
+    "    subplot_titles=[\"Canonical\", \"Rapid\", \"Dynamic\"],\n",
     "    horizontal_spacing=0.02,\n",
     "    vertical_spacing=0.02,\n",
     ")\n",
     "for i, figure in enumerate(figures):\n",
     "    for trace in range(len(figure[\"data\"])):\n",
     "        fig.append_trace(figure[\"data\"][trace], row=1, col=i + 1)\n",
-    "fig.update_layout(showlegend=False, height=500, width=900)\n",
+    "fig.update_layout(showlegend=False, height=450, width=1100)\n",
     "fig"
    ]
   },
