dynamic parallel first working version

--- a/sandbox/bench.ipynb
+++ b/sandbox/bench.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "42ec4643-a6be-4b8d-8e4d-fb4d7c6140b9",
    "metadata": {},
    "outputs": [
@@ -56,18 +56,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.73 ms ± 145 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "1.9 ms ± 222 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit -r1000 -n1\n",
-    "anjl.dynamic_nj(small_dist)"
+    "anjl.dynamic_nj(small_dist, parallel=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
+   "id": "cae6865a-9d56-40cc-9652-b5e9f4640308",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The slowest run took 17.46 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "3.57 ms ± 1.82 ms per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -r1000 -n1\n",
+    "anjl.dynamic_nj(small_dist, parallel=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "915b0085-52d4-4126-ac48-59dfb7dc403e",
    "metadata": {},
    "outputs": [
@@ -75,7 +95,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.35 ms ± 206 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "4.56 ms ± 439 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -86,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "76f10e01-4497-43d4-a47f-2a01ec5c011a",
    "metadata": {},
    "outputs": [
@@ -94,7 +114,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.17 ms ± 154 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "2.14 ms ± 269 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -105,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "68884753-f4b9-484c-a82b-1ffce38d0400",
    "metadata": {},
    "outputs": [
@@ -113,8 +133,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The slowest run took 57.33 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
-      "2.48 ms ± 4.01 ms per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "The slowest run took 30.38 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "3.79 ms ± 4.87 ms per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -133,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "befccb6f-dffa-49b7-97eb-1d5437568001",
    "metadata": {},
    "outputs": [
@@ -143,7 +163,7 @@
        "(472, 472)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "ebf1c642-1fa3-4047-a981-ddcd7afdf76c",
    "metadata": {},
    "outputs": [
@@ -164,18 +184,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.95 ms ± 1.21 ms per loop (mean ± std. dev. of 500 runs, 1 loop each)\n"
+      "8.51 ms ± 682 μs per loop (mean ± std. dev. of 500 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit -r500 -n1\n",
-    "anjl.dynamic_nj(medium_dist)"
+    "anjl.dynamic_nj(medium_dist, parallel=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
+   "id": "864d85f8-3ad6-4a68-981e-2040474acac1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The slowest run took 9.61 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "13.4 ms ± 9.03 ms per loop (mean ± std. dev. of 500 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -r500 -n1\n",
+    "anjl.dynamic_nj(medium_dist, parallel=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "a7155702-0e81-4d54-a6b2-c68642e056f2",
    "metadata": {},
    "outputs": [
@@ -183,7 +223,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "35.4 ms ± 1.74 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "35.7 ms ± 1.38 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -194,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "316ec457-3799-4843-80df-491956229101",
    "metadata": {},
    "outputs": [
@@ -202,7 +242,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "25 ms ± 1.42 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "24.6 ms ± 1.09 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -213,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "6ab837d0-37ad-4d57-b063-4150851142c8",
    "metadata": {},
    "outputs": [
@@ -221,8 +261,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The slowest run took 11.82 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
-      "14.1 ms ± 13.2 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "The slowest run took 8.53 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "16.8 ms ± 10.7 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -241,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "31ba8838-150b-42ee-84fd-7da492b8c36c",
    "metadata": {},
    "outputs": [
@@ -251,7 +291,7 @@
        "(3081, 3081)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "00997e17-82ec-4e34-be55-26631a80c738",
    "metadata": {},
    "outputs": [
@@ -272,7 +312,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 344.43 MiB, increment: 18.03 MiB\n"
+      "peak memory: 349.49 MiB, increment: 18.07 MiB\n"
      ]
     }
    ],
@@ -283,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "782af7e8-8891-431b-be9e-835b442410c7",
    "metadata": {},
    "outputs": [
@@ -291,7 +331,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 344.34 MiB, increment: 17.80 MiB\n"
+      "peak memory: 348.37 MiB, increment: 16.88 MiB\n"
      ]
     }
    ],
@@ -302,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "e825c570-c9b0-4405-b0b3-84680eaf5f2a",
    "metadata": {},
    "outputs": [
@@ -310,13 +350,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "335 ms ± 15.1 ms per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
+      "505 ms ± 11.3 ms per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit -r20 -n1\n",
-    "anjl.dynamic_nj(large_dist)"
+    "anjl.dynamic_nj(large_dist, parallel=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "2eef0126-79ad-4345-a995-19d4da0b6fc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "479 ms ± 54.8 ms per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -r20 -n1\n",
+    "anjl.dynamic_nj(large_dist, parallel=True)"
    ]
   },
   {
@@ -340,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "0bc124d6-dfcb-4513-ae57-471c2a063d62",
    "metadata": {},
    "outputs": [
@@ -348,7 +407,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.67 s ± 72.3 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
+      "7.67 s ± 22.7 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -359,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "f91c379e-39c6-4356-8ebb-e314d1bbb9f5",
    "metadata": {},
    "outputs": [
@@ -367,7 +426,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.37 s ± 44.4 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
+      "2.36 s ± 85 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -386,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "c219009d-5813-4f98-ad24-ed9b341c438d",
    "metadata": {},
    "outputs": [
@@ -396,7 +455,7 @@
        "(5868, 5868)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,14 +506,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "id": "94a7d01c-a7a5-40a1-80a9-f42eb0f27399",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 2.57 s, sys: 8.99 ms, total: 2.58 s\n",
+      "Wall time: 2.58 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "anjl.dynamic_nj(xl_dist, parallel=False);"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 23,
+   "id": "b3efd051-1ec5-4035-b5ff-47d659daea28",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 16.3 s, sys: 31.9 ms, total: 16.3 s\n",
+      "Wall time: 2.14 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "anjl.dynamic_nj(xl_dist, parallel=True);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "50f32cfd-9755-40ba-ba55-7eef7242a6cf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1d0a8249b7a745ef85c42956e8b9e8f6",
+       "model_id": "b59eb708b3e74168828762fd670e3623",
        "version_major": 2,
        "version_minor": 0
       },
@@ -469,8 +568,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.18 s, sys: 17 ms, total: 2.2 s\n",
-      "Wall time: 2.18 s\n"
+      "CPU times: user 18.8 s, sys: 43.8 ms, total: 18.8 s\n",
+      "Wall time: 2.51 s\n"
      ]
     }
    ],
@@ -591,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "id": "ccd20931-8281-49ff-b142-d0fae8d53f63",
    "metadata": {},
    "outputs": [
@@ -601,7 +700,7 @@
        "(8825, 8825)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,6 +732,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "id": "adc1fb87-4e27-45f3-99a5-a57db73a06b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 7.09 s, sys: 20 ms, total: 7.11 s\n",
+      "Wall time: 7.11 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "anjl.dynamic_nj(xxl_dist, parallel=False);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "9121e296-89cb-4c71-80c9-a7ec7bca5994",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 43.1 s, sys: 45 ms, total: 43.2 s\n",
+      "Wall time: 5.65 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "anjl.dynamic_nj(xxl_dist, parallel=True);"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
    "id": "4b302183-5d97-41c0-857f-59086e8b981f",
    "metadata": {},
@@ -640,7 +779,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "92ea5360473447ed880196af73f7b133",
+       "model_id": "b5040e8254064b0a9e31b013b647c81d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -655,8 +794,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6.36 s, sys: 26 ms, total: 6.38 s\n",
-      "Wall time: 6.34 s\n"
+      "CPU times: user 48.5 s, sys: 101 ms, total: 48.6 s\n",
+      "Wall time: 6.45 s\n"
      ]
     }
    ],
