revert to investigate performance regression

--- a/sandbox/bench.ipynb
+++ b/sandbox/bench.ipynb
@@ -16,6 +16,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "024d2a61-f4ef-4c4d-9791-4f5d23440fc1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "os.environ.get(\"NUMBA_BOUNDSCHECK\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "2b2dde93-ab62-4b0a-81c2-385ef3ec1e39",
    "metadata": {},
@@ -25,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "eb436654-d847-4e79-85ad-64f83006994c",
    "metadata": {},
    "outputs": [
@@ -35,7 +47,7 @@
        "(181, 181)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "42ec4643-a6be-4b8d-8e4d-fb4d7c6140b9",
    "metadata": {},
    "outputs": [
@@ -56,7 +68,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.9 ms ± 222 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "1.96 ms ± 178 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
