--- a/sandbox/bench.ipynb
+++ b/sandbox/bench.ipynb
@@ -16,6 +16,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "8d26b208-0147-4c53-ba9d-35c422297511",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from anjl._dynamic import dynamic_search_parallel, dynamic_update_parallel\n",
+    "# dynamic_search_parallel.parallel_diagnostics(level=4)\n",
+    "# dynamic_update_parallel.parallel_diagnostics(level=4)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "2b2dde93-ab62-4b0a-81c2-385ef3ec1e39",
    "metadata": {},
@@ -25,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "eb436654-d847-4e79-85ad-64f83006994c",
    "metadata": {},
    "outputs": [
@@ -35,7 +47,7 @@
        "(181, 181)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "42ec4643-a6be-4b8d-8e4d-fb4d7c6140b9",
    "metadata": {},
    "outputs": [
@@ -56,7 +68,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.75 ms ± 143 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "2.05 ms ± 285 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -67,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "cae6865a-9d56-40cc-9652-b5e9f4640308",
    "metadata": {},
    "outputs": [
@@ -75,8 +87,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The slowest run took 29.28 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
-      "3.77 ms ± 4.51 ms per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "The slowest run took 10.70 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "4.78 ms ± 2.3 ms per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -87,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "915b0085-52d4-4126-ac48-59dfb7dc403e",
    "metadata": {},
    "outputs": [
@@ -95,7 +107,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.39 ms ± 426 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "4.25 ms ± 305 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -106,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "76f10e01-4497-43d4-a47f-2a01ec5c011a",
    "metadata": {},
    "outputs": [
@@ -114,7 +126,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.12 ms ± 122 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "3.52 ms ± 173 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -133,8 +145,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The slowest run took 30.38 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
-      "3.79 ms ± 4.87 ms per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "3.41 ms ± 463 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -153,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "befccb6f-dffa-49b7-97eb-1d5437568001",
    "metadata": {},
    "outputs": [
@@ -163,7 +174,7 @@
        "(472, 472)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "ebf1c642-1fa3-4047-a981-ddcd7afdf76c",
    "metadata": {},
    "outputs": [
@@ -184,7 +195,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.59 ms ± 432 μs per loop (mean ± std. dev. of 500 runs, 1 loop each)\n"
+      "9.34 ms ± 1.03 ms per loop (mean ± std. dev. of 500 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -195,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "864d85f8-3ad6-4a68-981e-2040474acac1",
    "metadata": {},
    "outputs": [
@@ -203,8 +214,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The slowest run took 10.13 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
-      "14.1 ms ± 9.47 ms per loop (mean ± std. dev. of 500 runs, 1 loop each)\n"
+      "14.4 ms ± 1.42 ms per loop (mean ± std. dev. of 500 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -223,7 +233,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "35.7 ms ± 1.38 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "35.4 ms ± 1.07 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -242,7 +252,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "24.6 ms ± 1.09 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "47.8 ms ± 1.05 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -261,8 +271,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The slowest run took 8.53 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
-      "16.8 ms ± 10.7 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "15.7 ms ± 1.8 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -281,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "31ba8838-150b-42ee-84fd-7da492b8c36c",
    "metadata": {},
    "outputs": [
@@ -291,7 +300,7 @@
        "(3081, 3081)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "00997e17-82ec-4e34-be55-26631a80c738",
    "metadata": {},
    "outputs": [
@@ -312,7 +321,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 349.49 MiB, increment: 18.07 MiB\n"
+      "peak memory: 348.45 MiB, increment: 18.09 MiB\n"
      ]
     }
    ],
@@ -323,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "782af7e8-8891-431b-be9e-835b442410c7",
    "metadata": {},
    "outputs": [
@@ -331,7 +340,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 348.37 MiB, increment: 16.88 MiB\n"
+      "peak memory: 347.60 MiB, increment: 17.04 MiB\n"
      ]
     }
    ],
@@ -342,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "e825c570-c9b0-4405-b0b3-84680eaf5f2a",
    "metadata": {},
    "outputs": [
@@ -350,7 +359,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "356 ms ± 9.13 ms per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
+      "414 ms ± 7.37 ms per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -361,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "2eef0126-79ad-4345-a995-19d4da0b6fc5",
    "metadata": {},
    "outputs": [
@@ -369,7 +378,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "507 ms ± 44.5 ms per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
+      "320 ms ± 10.7 ms per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -380,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "edbc408e-f210-4bd4-8762-e249c66c1dd0",
    "metadata": {},
    "outputs": [
@@ -388,7 +397,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.97 s ± 21.9 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
+      "2.95 s ± 12.3 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -399,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "0bc124d6-dfcb-4513-ae57-471c2a063d62",
    "metadata": {},
    "outputs": [
@@ -407,7 +416,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.67 s ± 22.7 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
+      "13.5 s ± 185 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -418,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "f91c379e-39c6-4356-8ebb-e314d1bbb9f5",
    "metadata": {},
    "outputs": [
@@ -426,7 +435,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.36 s ± 85 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
+      "2.22 s ± 18.6 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -445,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "id": "c219009d-5813-4f98-ad24-ed9b341c438d",
    "metadata": {},
    "outputs": [
@@ -455,7 +464,7 @@
        "(5868, 5868)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "6c65d726-92f9-4294-ac41-8d6f7b182572",
    "metadata": {},
    "outputs": [
@@ -476,7 +485,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 608.53 MiB, increment: 65.71 MiB\n"
+      "peak memory: 611.21 MiB, increment: 65.64 MiB\n"
      ]
     }
    ],
@@ -487,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "e2005194-6b68-48a4-94fe-20f5e75a7c53",
    "metadata": {},
    "outputs": [
@@ -495,7 +504,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 608.53 MiB, increment: 65.62 MiB\n"
+      "peak memory: 611.22 MiB, increment: 65.63 MiB\n"
      ]
     }
    ],
@@ -506,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "id": "94a7d01c-a7a5-40a1-80a9-f42eb0f27399",
    "metadata": {},
    "outputs": [
@@ -514,19 +523,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.89 s, sys: 9 ms, total: 1.9 s\n",
-      "Wall time: 1.9 s\n"
+      "2.09 s ± 17.3 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "%%time\n",
+    "%%timeit -r3 -n1\n",
     "anjl.dynamic_nj(xl_dist, parallel=False);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "id": "b3efd051-1ec5-4035-b5ff-47d659daea28",
    "metadata": {},
    "outputs": [
@@ -534,26 +542,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 18.6 s, sys: 33.8 ms, total: 18.6 s\n",
-      "Wall time: 2.47 s\n"
+      "1.41 s ± 17.1 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "%%time\n",
+    "%%timeit -r3 -n1\n",
     "anjl.dynamic_nj(xl_dist, parallel=True);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "id": "50f32cfd-9755-40ba-ba55-7eef7242a6cf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b59eb708b3e74168828762fd670e3623",
+       "model_id": "95993b4e54054a7e81f0a2e46f747e3a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -568,8 +575,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 18.8 s, sys: 43.8 ms, total: 18.8 s\n",
-      "Wall time: 2.51 s\n"
+      "CPU times: user 11.5 s, sys: 46.9 ms, total: 11.5 s\n",
+      "Wall time: 1.56 s\n"
      ]
     }
    ],
@@ -580,14 +587,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "id": "d03fdca2-2c6e-4389-ad3c-0bb84eb6ce16",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b658fe0f17a440888577424cd91f646a",
+       "model_id": "b899dc795e6246f1b5665b8910e7a3ce",
        "version_major": 2,
        "version_minor": 0
       },
@@ -602,8 +609,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 19.5 s, sys: 261 ms, total: 19.8 s\n",
-      "Wall time: 19.7 s\n"
+      "CPU times: user 19.3 s, sys: 277 ms, total: 19.6 s\n",
+      "Wall time: 19.4 s\n"
      ]
     }
    ],
@@ -614,14 +621,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "id": "49b6da7b-1ee3-49e1-98ca-2706a5195b01",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "61d85a7b70b6416ba44c0386a808ab19",
+       "model_id": "ebd263b5e3694cb8828d3562e305963a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -636,8 +643,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 25s, sys: 136 ms, total: 1min 25s\n",
-      "Wall time: 1min 25s\n"
+      "CPU times: user 1min 47s, sys: 111 ms, total: 1min 47s\n",
+      "Wall time: 1min 46s\n"
      ]
     }
    ],
@@ -648,14 +655,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "id": "b5959611-567d-4efc-a05a-1e2a8bed806f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4c07537b7c354212b9ccf802f762cd1b",
+       "model_id": "572664a3c2914c5aa26b22f1084f46e4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -670,8 +677,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3min 12s, sys: 237 ms, total: 3min 12s\n",
-      "Wall time: 25.1 s\n"
+      "CPU times: user 3min, sys: 260 ms, total: 3min\n",
+      "Wall time: 23.2 s\n"
      ]
     }
    ],
@@ -690,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "id": "ccd20931-8281-49ff-b142-d0fae8d53f63",
    "metadata": {},
    "outputs": [
@@ -700,7 +707,7 @@
        "(8825, 8825)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,10 +720,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "e812009e-2642-4d93-a85b-a63f11828b5c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "peak memory: 1160.49 MiB, increment: 148.50 MiB\n"
+     ]
+    }
+   ],
    "source": [
     "%%memit\n",
     "anjl.dynamic_nj(xxl_dist);"
@@ -724,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "id": "adc1fb87-4e27-45f3-99a5-a57db73a06b1",
    "metadata": {},
    "outputs": [
@@ -732,8 +747,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5.73 s, sys: 34 ms, total: 5.77 s\n",
-      "Wall time: 5.76 s\n"
+      "CPU times: user 6.86 s, sys: 19 ms, total: 6.88 s\n",
+      "Wall time: 6.87 s\n"
      ]
     }
    ],
@@ -744,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "id": "9121e296-89cb-4c71-80c9-a7ec7bca5994",
    "metadata": {},
    "outputs": [
@@ -752,8 +767,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 38.9 s, sys: 52.1 ms, total: 38.9 s\n",
-      "Wall time: 5.11 s\n"
+      "CPU times: user 33 s, sys: 74.9 ms, total: 33.1 s\n",
+      "Wall time: 4.4 s\n"
      ]
     }
    ],
@@ -764,14 +779,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "id": "4b302183-5d97-41c0-857f-59086e8b981f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5037a9a6a2f54f7888115af562cbabc8",
+       "model_id": "ec027503c1b8466d8bcdeabfeaa0d71e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -786,26 +801,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 47.7 s, sys: 96.4 ms, total: 47.8 s\n",
-      "Wall time: 6.42 s\n"
+      "CPU times: user 36.1 s, sys: 106 ms, total: 36.2 s\n",
+      "Wall time: 4.82 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "anjl.dynamic_nj(xxl_dist, progress=tqdm);"
+    "anjl.dynamic_nj(xxl_dist, parallel=True, progress=tqdm);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 37,
    "id": "94f6d2f5-e61e-45c8-934f-66289798bce9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "04834876092d459bb44783f575b7e283",
+       "model_id": "d8f72a79d9884dae94463da558f8d724",
        "version_major": 2,
        "version_minor": 0
       },
@@ -820,8 +835,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 4s, sys: 638 ms, total: 1min 4s\n",
-      "Wall time: 1min 4s\n"
+      "CPU times: user 1min 3s, sys: 641 ms, total: 1min 4s\n",
+      "Wall time: 1min 3s\n"
      ]
     }
    ],
@@ -832,14 +847,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 38,
    "id": "8c4a9a32-2922-460b-9df1-3baacbb7633f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f46779776cfc4f4694f4ef7aec1db24e",
+       "model_id": "d89d1ede76f4471d84b152d22b5f4c80",
        "version_major": 2,
        "version_minor": 0
       },
@@ -854,8 +869,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 12min 50s, sys: 861 ms, total: 12min 51s\n",
-      "Wall time: 1min 40s\n"
+      "CPU times: user 11min 48s, sys: 710 ms, total: 11min 49s\n",
+      "Wall time: 1min 30s\n"
      ]
     }
    ],
@@ -874,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
    "id": "d8b58001-517c-452e-9e54-68fd7da9eaad",
    "metadata": {},
    "outputs": [
